# datefixer

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
datefixer/: __init__.py  cli.py  date_mapper.py  exif_setter.py  exiftool.py  organize.py  search.py  set_dates.py  set_times.py  transcode.py  utils.py
gpt5-mini/: README.md  pyproject.toml
gpt5-mini/datefixer/: date_mapper.py  exif_setter.py  transcode.py
gpt5-mini/fdh/: __init__.py  cli.py  date_mapper.py  exiftool.py  set_times.py  utils.py
gpt5-mini/tests/: test_utils.py
tests/: conftest.py  test_cli_integration.py  test_core.py  test_date_mapper.py  test_exif_json_parse.py  test_exif_setter_and_set_times.py  test_exiftool_integration.py  test_exiftool_mock.py  test_fixtures_integration.py  test_integration.py  test_organize.py  test_search.py  test_set_dates.py  test_set_dates_flow.py  test_transcode.py  test_utils.py  test_utils_more.py
