[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "datefixer"
version = "0.0.4"
description = "File date helpers"
authors = [
    { name = "Juaquin" }
]
requires-python = ">=3.8"

# Runtime dependencies used by the package
dependencies = [
    "python-dateutil>=2.8",
    "tqdm>=4.0",
]


# Console script entry point
[project.scripts]
datefixer = "datefixer.cli:main"


# Tell setuptools which packages to include
[tool.setuptools.packages.find]
where = ["."]
include = ["datefixer"]


# -------------------- #
# Pytest configuration #
# -------------------- #
[tool.pytest.ini_options]
addopts = "--cov=datefixer --color=yes --code-highlight=yes"
testpaths = ["tests"]
